# gostdoc

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  ТЗ.md
.github/workflows/: ci.yml
packaging/: build.md  gostdoc_entry.py  gostdoc_gui_entry.py
src/gostdoc/: __init__.py  classify.py  cli.py  constants.py  detect.py  formatter.py  gui.py  paragraphs.py  profile.py  runs.py  sections.py  styles.py  xml_utils.py
tests/: conftest.py  make_fixtures.py  test_classify.py  test_detect.py  test_errors.py  test_fonts.py  test_gui.py  test_idempotency.py  test_invariant.py  test_margins.py  test_pagenumbers.py  test_profile.py  test_robustness.py  test_spacing_indent.py  test_styles.py  test_warnings.py
